@@ -65,6 +65,7 @@
 <a href="CoreTasks/libraries.html">Libraries</a><br>
 <a href="CoreTasks/loadfile.html">LoadFile</a><br>
 <a href="CoreTasks/loadproperties.html">LoadProperties</a><br>
+<a href="CoreTasks/loadresource.html">LoadResource</a><br>
 <a href="CoreTasks/makeurl.html">MakeURL</a><br>
 <a href="CoreTasks/mail.html">Mail</a><br>
 <a href="CoreTasks/macrodef.html">MacroDef</a><br>
